visualizando imagenes movil

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <tr>
                     <th>Motivo</th>
                     <th>fecha</th>
-                    <th>Dep</th>
-                    <th>Ext</th>
+                    <th>D</th>
+                    <th>E</th>
                     <th>Mónto</th>
                     <th>Saldo</th>
-                    <th>Det</th>
+                    <th class="bi bi-eye"></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -139,7 +139,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Detalle Venta de Numeros Viaje LGBT Games BA.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Detalle Venta de Numeros Viaje LGBT Games BA.pdf" type="application/pdf" width="100%" height="500px">
+                <div class="row">
+                    <img class="imagenes" src="img/Detalle Venta de Numeros Viaje LGBT Games BA/Detalle Venta de Numeros Viaje LGBT Games BA-1.png" alt="">
+                </div>
             </div>
 
             <!-- Modal footer -->
@@ -164,7 +167,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Detalle viaje LGBT Games BA.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Detalle viaje LGBT Games BA.pdf" type="application/pdf" width="100%" height="500px">
+                    <div class="row">
+                        <img class="imagenes" src="img/Detalle viaje LGBT Games BA/Detalle viaje LGBT Games BA-1.png" alt="">
+                    </div>
             </div>
 
             <!-- Modal footer -->
@@ -189,7 +195,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Detalle Préstamo 23-05-2023.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Detalle Préstamo 23-05-2023.pdf" type="application/pdf" width="100%" height="500px">
+                <div class="row">
+                    <img class="imagenes" src="img/Detalle Préstamo 23-05-2023/Detalle Préstamo 23-05-2023-1.png" alt="">
+                </div>
             </div>
 
             <!-- Modal footer -->
@@ -214,7 +223,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/lista-camisetas-caraya - 2023.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/lista-camisetas-caraya - 2023.pdf" type="application/pdf" width="100%" height="500px">
+                <div class="row">
+                    <img class="imagenes" src="img/lista-camisetas-caraya - 2023/lista-camisetas-caraya - 2023-1.png" alt="">
+                </div>
             </div>
 
             <!-- Modal footer -->
@@ -239,7 +251,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Comprobante Devolución Préstamo del fondo.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Comprobante Devolución Préstamo del fondo.pdf" type="application/pdf" width="100%" height="500px">
+                <div class="row">
+                    <img class="imagenes" src="img/Comprobante Devolución Préstamo del fondo/Comprobante Devolución Préstamo del fondo-1.png" alt="">
+                </div>
             </div>
 
             <!-- Modal footer -->
@@ -264,7 +279,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Rifas 8-07-2023 y Motivos Varios.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Rifas 8-07-2023 y Motivos Varios.pdf" type="application/pdf" width="100%" height="500px">
+                <div class="row">
+                    <img class="imagenes" src="img/Rifas 8-07-2023 y Motivos Varios/Rifas 8-07-2023 y Motivos Varios-1.png" alt="">
+                </div>
             </div>
 
             <!-- Modal footer -->
@@ -289,7 +307,10 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                <embed src="pdf/Detalle recaudo LGBT Games 2023.pdf" type="application/pdf" width="100%" height="500px">
+                <embed class="pdfs" src="pdf/Detalle recaudo LGBT Games 2023.pdf" type="application/pdf" width="100%" height="500px">
+                    <div class="row">
+                        <img class="imagenes" src="img/Detalle recaudo LGBT Games 2023/Detalle recaudo LGBT Games 2023-1.png" alt="">
+                    </div>
             </div>
 
             <!-- Modal footer -->
@@ -314,7 +335,10 @@
     
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <embed src="pdf/Detalle gastos Lgbt Games 2023.pdf" type="application/pdf" width="100%" height="500px">
+                    <embed class="pdfs" src="pdf/Detalle gastos Lgbt Games 2023.pdf" type="application/pdf" width="100%" height="500px">
+                    <div class="row">
+                        <img class="imagenes" src="img/Detalle gastos Lgbt Games 2023/Detalle gastos Lgbt Games 2023-1.png" alt="">
+                    </div>
                 </div>
     
                 <!-- Modal footer -->
